fix body overflow, add hero background color

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -5,4 +5,4 @@ html
 	box-sizing: inherit
 
 body
-	background: linear-gradient(to top right, #FF5F6D, #FFC371)
+	overflow-x: hidden
