--- a/styles/includes/hero.styl
+++ b/styles/includes/hero.styl
@@ -2,6 +2,7 @@
 	min-height: 66vh
 	// max-height: 100vw
 
+	background-color: $brand-red
 	background-size: cover
 	background-position: center
 
